Report `AbstractMethodNotImplemented` on exemplar/mixin definition, instead of on method definition