@@ -5,6 +5,7 @@ import static nl.ramsolutions.sw.checks.magiktyped.MagikTypedCheckAssert.assertT
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
+import java.util.Set;
 import nl.ramsolutions.sw.checks.MagikTypedCheck;
 import nl.ramsolutions.sw.magik.analysis.definitions.DefinitionKeeper;
 import nl.ramsolutions.sw.magik.analysis.definitions.ExemplarDefinition;
@@ -20,27 +21,21 @@ class AbstractMethodNotImplementedTypedCheckTest {
   private static final TypeString TYPE_PARENT = TypeString.ofIdentifier("parent", "sw");
   private static final TypeString TYPE_CHILD = TypeString.ofIdentifier("child", "sw");
 
-  @Test
-  void testAbstractMethodImplemented() {
-    final String code =
-        """
-        _method child.do_something()
-          _return 1
-        _endmethod
-        """;
-    final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
+  private void addExemplar(
+      final IDefinitionKeeper definitionKeeper,
+      final TypeString typeStr,
+      final ExemplarDefinition.Sort sort,
+      final List<TypeString> parents) {
     definitionKeeper.add(
         new ExemplarDefinition(
-            null,
-            null,
-            null,
-            null,
-            null,
-            ExemplarDefinition.Sort.SLOTTED,
-            TYPE_PARENT,
-            Collections.emptyList(),
-            Collections.emptyList(),
-            null));
+            null, null, null, null, null, sort, typeStr, Collections.emptyList(), parents, null));
+  }
+
+  private void addMethod(
+      final IDefinitionKeeper definitionKeeper,
+      final TypeString typeStr,
+      final String methodName,
+      final Set<MethodDefinition.Modifier> modifiers) {
     definitionKeeper.add(
         new MethodDefinition(
             null,
@@ -48,133 +43,78 @@ class AbstractMethodNotImplementedTypedCheckTest {
             null,
             null,
             null,
-            TYPE_PARENT,
-            "do_something()",
-            EnumSet.of(MethodDefinition.Modifier.ABSTRACT),
+            typeStr,
+            methodName,
+            modifiers,
             Collections.emptyList(),
             null,
             null,
             ExpressionResultString.EMPTY,
             ExpressionResultString.EMPTY));
-    definitionKeeper.add(
-        new ExemplarDefinition(
-            null,
-            null,
-            null,
-            null,
-            null,
-            ExemplarDefinition.Sort.SLOTTED,
-            TYPE_CHILD,
-            Collections.emptyList(),
-            List.of(TYPE_PARENT),
-            null));
-    definitionKeeper.add(
-        new MethodDefinition(
-            null,
-            null,
-            null,
-            null,
-            null,
-            TYPE_CHILD,
-            "do_something()",
-            EnumSet.noneOf(MethodDefinition.Modifier.class),
-            Collections.emptyList(),
-            null,
-            null,
-            new ExpressionResultString(TypeString.SW_INTEGER),
-            ExpressionResultString.EMPTY));
+  }
+
+  @Test
+  void testAbstractMethodImplemented() {
+    final String code = "def_slotted_exemplar(:child, {}, :parent)\n";
+    final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
+    this.addExemplar(
+        definitionKeeper, TYPE_PARENT, ExemplarDefinition.Sort.SLOTTED, Collections.emptyList());
+    this.addMethod(
+        definitionKeeper,
+        TYPE_PARENT,
+        "do_something()",
+        EnumSet.of(MethodDefinition.Modifier.ABSTRACT));
+    this.addExemplar(
+        definitionKeeper, TYPE_CHILD, ExemplarDefinition.Sort.SLOTTED, List.of(TYPE_PARENT));
+    this.addMethod(
+        definitionKeeper,
+        TYPE_CHILD,
+        "do_something()",
+        EnumSet.noneOf(MethodDefinition.Modifier.class));
     final MagikTypedCheck check = new AbstractMethodNotImplementedTypedCheck();
     assertThat(check).reportsNoIssues(code, definitionKeeper);
   }
 
   @Test
   void testAbstractMethodNotImplemented() {
-    final String code =
-        """
-        _method child.other_method()
-          _return 1
-        _endmethod
-        """;
+    final String code = "def_slotted_exemplar(:child, {}, :parent)\n";
     final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
-    definitionKeeper.add(
-        new ExemplarDefinition(
-            null,
-            null,
-            null,
-            null,
-            null,
-            ExemplarDefinition.Sort.SLOTTED,
-            TYPE_PARENT,
-            Collections.emptyList(),
-            Collections.emptyList(),
-            null));
-    definitionKeeper.add(
-        new MethodDefinition(
-            null,
-            null,
-            null,
-            null,
-            null,
-            TYPE_PARENT,
-            "do_something()",
-            EnumSet.of(MethodDefinition.Modifier.ABSTRACT),
-            Collections.emptyList(),
-            null,
-            null,
-            ExpressionResultString.EMPTY,
-            ExpressionResultString.EMPTY));
-    definitionKeeper.add(
-        new ExemplarDefinition(
-            null,
-            null,
-            null,
-            null,
-            null,
-            ExemplarDefinition.Sort.SLOTTED,
-            TYPE_CHILD,
-            Collections.emptyList(),
-            List.of(TYPE_PARENT),
-            null));
-    definitionKeeper.add(
-        new MethodDefinition(
-            null,
-            null,
-            null,
-            null,
-            null,
-            TYPE_CHILD,
-            "other_method()",
-            EnumSet.noneOf(MethodDefinition.Modifier.class),
-            Collections.emptyList(),
-            null,
-            null,
-            new ExpressionResultString(TypeString.SW_INTEGER),
-            ExpressionResultString.EMPTY));
+    this.addExemplar(
+        definitionKeeper, TYPE_PARENT, ExemplarDefinition.Sort.SLOTTED, Collections.emptyList());
+    this.addMethod(
+        definitionKeeper,
+        TYPE_PARENT,
+        "do_something()",
+        EnumSet.of(MethodDefinition.Modifier.ABSTRACT));
+    this.addExemplar(
+        definitionKeeper, TYPE_CHILD, ExemplarDefinition.Sort.SLOTTED, List.of(TYPE_PARENT));
+    final MagikTypedCheck check = new AbstractMethodNotImplementedTypedCheck();
+    assertThat(check).reportsIssueCount(code, definitionKeeper, 1);
+  }
+
+  @Test
+  void testMixinAbstractMethodNotImplemented() {
+    final String code = "def_mixin(:child, :parent)\n";
+    final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
+    this.addExemplar(
+        definitionKeeper, TYPE_PARENT, ExemplarDefinition.Sort.SLOTTED, Collections.emptyList());
+    this.addMethod(
+        definitionKeeper,
+        TYPE_PARENT,
+        "do_something()",
+        EnumSet.of(MethodDefinition.Modifier.ABSTRACT));
+    this.addExemplar(
+        definitionKeeper, TYPE_CHILD, ExemplarDefinition.Sort.MIXIN, List.of(TYPE_PARENT));
     final MagikTypedCheck check = new AbstractMethodNotImplementedTypedCheck();
     assertThat(check).reportsIssueCount(code, definitionKeeper, 1);
   }
 
   @Test
   void testNoParents() {
-    final String code =
-        """
-        _method child.do_something()
-          _return 1
-        _endmethod
-        """;
+    final String code = "def_slotted_exemplar(:child, {})\n";
     final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
-    definitionKeeper.add(
-        new ExemplarDefinition(
-            null,
-            null,
-            null,
-            null,
-            null,
-            ExemplarDefinition.Sort.SLOTTED,
-            TYPE_CHILD,
-            Collections.emptyList(),
-            Collections.emptyList(),
-            null));
+    this.addExemplar(
+        definitionKeeper, TYPE_CHILD, ExemplarDefinition.Sort.SLOTTED, Collections.emptyList());
     final MagikTypedCheck check = new AbstractMethodNotImplementedTypedCheck();
     assertThat(check).reportsNoIssues(code, definitionKeeper);
   }
